--- a/ledblink/templates/control_page.html
+++ b/ledblink/templates/control_page.html
@@ -8,8 +8,8 @@
 <div style="font-size: 2em;">
     <p>Current Status: {{ status }}</p>
     <form action="" method="post">{% csrf_token %}
-        <input style="font-size: 2em;" type="submit" name="on" value="on"/>
-        <input style="font-size: 2em;" type="submit" name="off" value="off"/>
+        <input style="font-size: 2em;" type="submit" name="on" value="On"/>
+        <input style="font-size: 2em;" type="submit" name="off" value="Off"/>
     </form>
 </div>
 </body>
