--- a/ledblink/templates/control_page.html
+++ b/ledblink/templates/control_page.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div style="font-size: 2em;">
-    <p>Current Status: {{ status }}</p><hr/>
+    <p>Current Status: {{ status }}</p>
     <hr class="style-two"/>
     <hr class="style-two"/>
     <form action="" method="post">{% csrf_token %}
